<resources>
    <string name="app_name">ReachBuddy</string>
    <string name="signinstring">SignIn</string>
    <string name="send_str">SEND</string>
    <string name="type_your_message">Type your message</string>
    <string name="sender_name">sender name</string>
    <string name="message_view">Message view</string>
    <string name="date_sended">date sended</string>
    <string name="menuimage">menuimage</string>
    <string name="public_chat">PUBLIC CHAT</string>
    <string name="private_chat">PRIVATE CHAT</string>
    <string name="display_name_string">Display Name</string>
    <string name="count_string">Count</string>
    <string name="like_image_string">Like image</string>
    <string name="profile_pic_image">Profile Pic Image</string>
    <string name="your_bio_here_string">Your Bio Here</string>
    <string name="image_to_edit_bio">image to edit bio</string>
    <string name="view_all_profiles">VIEW ALL PROFILES</string>
    <string name="imageviewerforprof">imageviewerforprof</string>
    <string name="make_buddy_string">MAKE BUDDY</string>
    <string name="for_canceling_request">For Canceling Request</string>
    <string name="for_accept_ing_request">For Accept ing Request</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reach_buddy">Reach Buddy</string>
    <string name="view_img">View</string>
    <string name="change_image">Change Image</string>
</resources>
