<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background=" #204675 ">

        <ImageView
            android:id="@+id/UserProfilePicImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/imageviewerforprof"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rounded_button" />

        <TextView
            android:id="@+id/UserDisplayNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/display_name_string"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/UserProfilePicImg"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/CheckImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/for_accept_ing_request"
            app:layout_constraintBottom_toBottomOf="@+id/UserDisplayNameTxt"
            app:layout_constraintEnd_toStartOf="@+id/CancelImg"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toEndOf="@+id/UserDisplayNameTxt"
            app:layout_constraintTop_toTopOf="@+id/UserDisplayNameTxt"
            app:srcCompat="@drawable/ic_check_black_24dp" />

        <ImageView
            android:id="@+id/CancelImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/for_canceling_request"
            app:layout_constraintBottom_toBottomOf="@+id/CheckImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CheckImg"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_clear_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>