<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02172E"
    tools:context=".ui.MainMenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#002654"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/app_name"
                app:titleTextColor="#fff" />

            <ImageView
                android:id="@+id/imgrequests"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/UserProfileIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_friend" />

            <ImageView
                android:id="@+id/UserProfileIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"

                android:contentDescription="@string/menuimage"
                android:src="@android:drawable/btn_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/requestcount"
                android:layout_width="17dp"
                android:layout_height="39dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@id/imgrequests"
                app:layout_constraintRight_toLeftOf="@id/imgrequests"
                app:layout_constraintTop_toTopOf="@id/imgrequests" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btnPublicChat"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/public_chat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/btnChatRoom"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/private_chat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/BtnViewAllProfiles"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/view_all_profiles"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPublicChat"
        app:layout_constraintStart_toStartOf="@+id/btnChatRoom"
        app:layout_constraintTop_toBottomOf="@+id/btnPublicChat" />


</androidx.constraintlayout.widget.ConstraintLayout>